plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.4'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.playus'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

ext {
	set('springCloudVersion', "2024.0.1")
}

dependencies {
	// Spring
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client' // OAuth2User 사용 위해
	implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0' // for StringUtils
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'

	// DB
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'mysql:mysql-connector-java:8.0.33'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation("org.redisson:redisson-spring-boot-starter:3.46.0") // for applying party!
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'

	// MSA
	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
	implementation 'org.springframework.cloud:spring-cloud-starter-circuitbreaker-resilience4j'

	// Kafka
	implementation 'org.springframework.kafka:spring-kafka'

	// Monitoring
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
	implementation 'io.micrometer:micrometer-registry-prometheus'

	// Object Storage
	implementation 'software.amazon.awssdk:s3:2.20.45'

	// Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// Test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'io.projectreactor:reactor-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	testImplementation "org.testcontainers:mysql:1.20.1"
	testImplementation 'org.testcontainers:junit-jupiter'

	testImplementation 'org.springframework.cloud:spring-cloud-contract-wiremock'

	// Swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'

	// JJWT Core
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'

	// JWT 서명용 구현체
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'

	// Jackson 또는 Gson과 연동하기 위한 모듈
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	// Sentry
	implementation("io.sentry:sentry-logback:7.17.0")
	implementation("com.github.maricn:logback-slack-appender:1.6.1")
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
	}
}

tasks.named('test') {
	useJUnitPlatform()
}

test {
	systemProperty 'user.language', 'ko'
	systemProperty 'user.country', 'KR'
}
